--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
   </div>
 
   <script>
-    const api = 'https://meusite-backend.onrender.com';
+    const api = 'https://meusite-mtz.onrender.com';
 
     async function carregar() {
       const res = await fetch(api + '/dados');
